# satyrn-ai-theme

./: README.md  pyproject.toml
.opencode/: .gitignore  package-lock.json
.opencode/agent/: tainie.md
.opencode/command/: tainie.md
.opencode/test/: recognize.test.ts  tainie.test.ts
.opencode/tool/: mellum-fim.ts  propagate.ts  recognize.ts  tainie.ts
docs/superpowers/plans/: 2026-07-13-satyrn-landing-page.md
docs/superpowers/specs/: 2026-07-13-satyrn-landing-page-design.md
site/: index.html
site/css/: style.css
site/js/: site.js
src/satyrn_ai_theme/static/: mascot.html  style.css
